-/TECHNE-OPS-003-disposable-k3s-ec2-proof/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ki-proof
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
